--- a/favicons/manifest.json
+++ b/favicons/manifest.json
@@ -12,7 +12,7 @@
             "type": "image/png"
         }
     ],
-    "theme_color": "#000000",
-    "background_color": "#000000",
+    "theme_color": "#2a2a43",
+    "background_color": "#2a2a43",
     "display": "standalone"
 }
